<resources>
    <string name="app_name">Schedule</string>

    <string name="title_schedule">Schedule</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_settings">Settings</string>

    <string name="title_activity_new_class">Add Class</string>
    <string name="title_activity_teachers_list">Teachers</string>
    <string name="title_activity_teacher">Teacher</string>
    <string name="title_activity_edit_task">Task</string>

    <string name="activity_title_new_teacher">New teacher</string>

    <string name="context_menu_view">View</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_remove">Remove</string>

    <string name="nothing_to_show">Nothing to show</string>
    <string name="empty_view_subjects">No subjects</string>

    <string name="action_add_new_class">Add New Class</string>

...
